fix: spacing on FolderActions button in Breadcrumb

--- a/src/ui/files/Files.scss
+++ b/src/ui/files/Files.scss
@@ -38,10 +38,6 @@
         margin-left: $margin-xl;
       }
 
-      .item-actions {
-        margin-right: auto;
-      }
-
       button {
         margin-left: $margin-small;
 
